// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders 1`] = `
<div
  className="App"
>
  <div
    className="App-form"
  >
    <div
      className="App-form-info-from"
    >
      <h2>
        From
      </h2>
      <WithStyles(DetailsForm)
        city=""
        email=""
        name=""
        onChange={[Function]}
        phone=""
        street=""
        zipCode=""
      />
    </div>
    <div
      className="App-form-info-to"
    >
      <h2>
        To
      </h2>
      <WithStyles(DetailsForm)
        city=""
        email=""
        name=""
        onChange={[Function]}
        phone=""
        street=""
        zipCode=""
      />
    </div>
  </div>
</div>
`;

exports[`App when invoice from changes renders with the new from 1`] = `
<div
  className="App"
>
  <div
    className="App-form"
  >
    <div
      className="App-form-info-from"
    >
      <h2>
        From
      </h2>
      <WithStyles(DetailsForm)
        city="Seattle"
        email="john@doe.com"
        name="John"
        onChange={[Function]}
        phone="555 666 7777"
        street="1st Ave"
        zipCode="09112"
      />
    </div>
    <div
      className="App-form-info-to"
    >
      <h2>
        To
      </h2>
      <WithStyles(DetailsForm)
        city=""
        email=""
        name=""
        onChange={[Function]}
        phone=""
        street=""
        zipCode=""
      />
    </div>
  </div>
</div>
`;

exports[`App when invoice to changes renders with the new to 1`] = `
<div
  className="App"
>
  <div
    className="App-form"
  >
    <div
      className="App-form-info-from"
    >
      <h2>
        From
      </h2>
      <WithStyles(DetailsForm)
        city=""
        email=""
        name=""
        onChange={[Function]}
        phone=""
        street=""
        zipCode=""
      />
    </div>
    <div
      className="App-form-info-to"
    >
      <h2>
        To
      </h2>
      <WithStyles(DetailsForm)
        city="Seattle"
        email="jane@doe.com"
        name="Jane"
        onChange={[Function]}
        phone="555 666 8888"
        street="2nd Ave"
        zipCode="09112"
      />
    </div>
  </div>
</div>
`;
